Details
Description
Go to
http://flash-movies.funmunch.com/movie-47.html
or
http://www.flashgames.de/game/09x-the-mission
in demobrowser, sound seems to be there, but rendering is incorrect, seems to look like inverted junk textures. See attached image.
Going to http://testwebcam.com/ and clicking on the flash applet (which is also not rendered properly) crashes the renderer process with the following stack trace in the stdout:
[71322:775:0509/180250.282136:FATAL:ppapi_host.cc(243)] Check failed: false. 1 base::debug::BreakDebugger() debugger_posix.cc 262 0x1031c88b4 2 logging::LogMessage::~LogMessage() logging.cc 748 0x103242b3c 3 logging::LogMessage::~LogMessage() logging.cc 528 0x10323f9d5 4 ppapi::host::PpapiHost::OnHostMsgResourceCreated(ppapi::proxy::ResourceMessageCallParams const&, int, IPC::Message const&) ppapi_host.cc 243 0x108d4dd99 5 void base::DispatchToMethodImpl<ppapi::host::PpapiHost *, void (ppapi::host::PpapiHost:: *)(ppapi::proxy::ResourceMessageCallParams const&, int, IPC::Message const&), std::tuple<ppapi::proxy::ResourceMessageCallParams, int, IPC::Message> const&, 0ul, 1ul, 2ul>(ppapi::host::PpapiHost * const&, void (ppapi::host::PpapiHost:: *)(ppapi::proxy::ResourceMessageCallParams const&, int, IPC::Message const&), std::tuple<ppapi::proxy::ResourceMessageCallParams, int, IPC::Message> const&&&, base::IndexSequence<0ul, 1ul, 2ul>) tuple.h 144 0x108d532de 6 void base::DispatchToMethod<ppapi::host::PpapiHost *, void (ppapi::host::PpapiHost:: *)(ppapi::proxy::ResourceMessageCallParams const&, int, IPC::Message const&), std::tuple<ppapi::proxy::ResourceMessageCallParams, int, IPC::Message> const&>(ppapi::host::PpapiHost * const&, void (ppapi::host::PpapiHost:: *)(ppapi::proxy::ResourceMessageCallParams const&, int, IPC::Message const&), std::tuple<ppapi::proxy::ResourceMessageCallParams, int, IPC::Message> const&&&) tuple.h 151 0x108d53209 7 void IPC::DispatchToMethod<ppapi::host::PpapiHost, void (ppapi::host::PpapiHost:: *)(ppapi::proxy::ResourceMessageCallParams const&, int, IPC::Message const&), void, std::tuple<ppapi::proxy::ResourceMessageCallParams, int, IPC::Message>>(ppapi::host::PpapiHost *, void (ppapi::host::PpapiHost:: *)(ppapi::proxy::ResourceMessageCallParams const&, int, IPC::Message const&), void *, std::tuple<ppapi::proxy::ResourceMessageCallParams, int, IPC::Message> const&) ipc_message_templates.h 26 0x108d5319d 8 bool IPC::MessageT<PpapiHostMsg_ResourceCreated_Meta, std::tuple<ppapi::proxy::ResourceMessageCallParams, int, IPC::Message>, void>::Dispatch<ppapi::host::PpapiHost, ppapi::host::PpapiHost, void, void (ppapi::host::PpapiHost:: *)(ppapi::proxy::ResourceMessageCallParams const&, int, IPC::Message const&)>(IPC::Message const *, ppapi::host::PpapiHost *, ppapi::host::PpapiHost *, void *, void (ppapi::host::PpapiHost:: *)(ppapi::proxy::ResourceMessageCallParams const&, int, IPC::Message const&)) ipc_message_templates.h 121 0x108d4d9d7 9 ppapi::host::PpapiHost::OnMessageReceived(IPC::Message const&) ppapi_host.cc 66 0x108d4c214 10 non-virtual thunk to ppapi::host::PpapiHost::OnMessageReceived(IPC::Message const&) ppapi_host.cc 57 0x108d4f3ec 11 ppapi::proxy::HostDispatcher::OnMessageReceived(IPC::Message const&) host_dispatcher.cc 194 0x10733c2c0 12 IPC::ChannelProxy::Context::OnDispatchMessage(IPC::Message const&) ipc_channel_proxy.cc 340 0x1055d2e98 13 IPC::SyncChannel::ReceivedSyncMsgQueue::DispatchMessages(IPC::SyncChannel::SyncContext *) ipc_sync_channel.cc 185 0x1056179c5 14 IPC::SyncChannel::SyncContext::DispatchMessages() ipc_sync_channel.cc 391 0x1056174a1 15 IPC::SyncChannel::OnDispatchHandleReady(unsigned int) ipc_sync_channel.cc 685 0x10561bd05 16 void base::internal::FunctorTraits<void (IPC::SyncChannel:: *)(unsigned int), void>::Invoke<IPC::SyncChannel *, unsigned int>(void (IPC::SyncChannel:: *)(unsigned int), IPC::SyncChannel *&&, unsigned int&&) bind_internal.h 214 0x105629093 17 void base::internal::InvokeHelper<false, void>::MakeItSo<void (IPC::SyncChannel:: * const&)(unsigned int), IPC::SyncChannel *, unsigned int>(void (IPC::SyncChannel:: * const&&&)(unsigned int), IPC::SyncChannel *&&, unsigned int&&) bind_internal.h 285 0x105628fa6 18 void base::internal::Invoker<base::internal::BindState<void (IPC::SyncChannel:: *)(unsigned int), base::internal::UnretainedWrapper<IPC::SyncChannel>>, void (unsigned int)>::RunImpl<void (IPC::SyncChannel:: * const&)(unsigned int), std::tuple<base::internal::UnretainedWrapper<IPC::SyncChannel>> const&, 0ul>(void (IPC::SyncChannel:: * const&&&)(unsigned int), std::tuple<base::internal::UnretainedWrapper<IPC::SyncChannel>> const&&&, base::IndexSequence<0ul>, unsigned int&&) bind_internal.h 361 0x105628f2b 19 base::internal::Invoker<base::internal::BindState<void (IPC::SyncChannel:: *)(unsigned int), base::internal::UnretainedWrapper<IPC::SyncChannel>>, void (unsigned int)>::Run(base::internal::BindStateBase *, unsigned int&&) bind_internal.h 339 0x105628e64 20 base::internal::RunMixin<base::Callback<void (unsigned int), (base::internal::CopyMode)1, (base::internal::RepeatMode)1>>::Run(unsigned int) const callback.h 64 0x1001a54fb 21 mojo::Watcher::OnHandleReady(unsigned int) watcher.cc 122 0x105591c10 22 void base::internal::FunctorTraits<void (mojo::Watcher:: *)(unsigned int), void>::Invoke<base::WeakPtr<mojo::Watcher> const&, unsigned int const&>(void (mojo::Watcher:: *)(unsigned int), base::WeakPtr<mojo::Watcher> const&&&, unsigned int const&&&) bind_internal.h 214 0x1055922c5 23 void base::internal::InvokeHelper<true, void>::MakeItSo<void (mojo::Watcher:: * const&)(unsigned int), base::WeakPtr<mojo::Watcher> const&, unsigned int const&>(void (mojo::Watcher:: * const&&&)(unsigned int), base::WeakPtr<mojo::Watcher> const&&&, unsigned int const&&&) bind_internal.h 305 0x105592179 24 void base::internal::Invoker<base::internal::BindState<void (mojo::Watcher:: *)(unsigned int), base::WeakPtr<mojo::Watcher>, unsigned int>, void ()>::RunImpl<void (mojo::Watcher:: * const&)(unsigned int), std::tuple<base::WeakPtr<mojo::Watcher>, unsigned int> const&, 0ul, 1ul>(void (mojo::Watcher:: * const&&&)(unsigned int), std::tuple<base::WeakPtr<mojo::Watcher>, unsigned int> const&&&, base::IndexSequence<0ul, 1ul>) bind_internal.h 361 0x105592109 25 base::internal::Invoker<base::internal::BindState<void (mojo::Watcher:: *)(unsigned int), base::WeakPtr<mojo::Watcher>, unsigned int>, void ()>::Run(base::internal::BindStateBase *) bind_internal.h 339 0x10559202c 26 base::internal::RunMixin<base::Callback<void (), (base::internal::CopyMode)0, (base::internal::RepeatMode)0>>::Run() callback.h 47 0x103416bda 27 base::debug::TaskAnnotator::RunTask(const char *, base::PendingTask *) task_annotator.cc 52 0x1031cb73b 28 blink::scheduler::TaskQueueManager::ProcessTaskFromWorkQueue(blink::scheduler::internal::WorkQueue *) task_queue_manager.cc 358 0x109be6978 29 blink::scheduler::TaskQueueManager::DoWork(base::TimeTicks, bool) task_queue_manager.cc 250 0x109be3029 30 void base::internal::FunctorTraits<void (blink::scheduler::TaskQueueManager:: *)(base::TimeTicks, bool), void>::Invoke<base::WeakPtr<blink::scheduler::TaskQueueManager> const&, base::TimeTicks const&, bool const&>(void (blink::scheduler::TaskQueueManager:: *)(base::TimeTicks, bool), base::WeakPtr<blink::scheduler::TaskQueueManager> const&&&, base::TimeTicks const&&&, bool const&&&) bind_internal.h 214 0x109bec377 31 void base::internal::InvokeHelper<true, void>::MakeItSo<void (blink::scheduler::TaskQueueManager:: * const&)(base::TimeTicks, bool), base::WeakPtr<blink::scheduler::TaskQueueManager> const&, base::TimeTicks const&, bool const&>(void (blink::scheduler::TaskQueueManager:: * const&&&)(base::TimeTicks, bool), base::WeakPtr<blink::scheduler::TaskQueueManager> const&&&, base::TimeTicks const&&&, bool const&&&) bind_internal.h 305 0x109bec1c0 32 void base::internal::Invoker<base::internal::BindState<void (blink::scheduler::TaskQueueManager:: *)(base::TimeTicks, bool), base::WeakPtr<blink::scheduler::TaskQueueManager>, base::TimeTicks, bool>, void ()>::RunImpl<void (blink::scheduler::TaskQueueManager:: * const&)(base::TimeTicks, bool), std::tuple<base::WeakPtr<blink::scheduler::TaskQueueManager>, base::TimeTicks, bool> const&, 0ul, 1ul, 2ul>(void (blink::scheduler::TaskQueueManager:: * const&&&)(base::TimeTicks, bool), std::tuple<base::WeakPtr<blink::scheduler::TaskQueueManager>, base::TimeTicks, bool> const&&&, base::IndexSequence<0ul, 1ul, 2ul>) bind_internal.h 361 0x109bec13a 33 base::internal::Invoker<base::internal::BindState<void (blink::scheduler::TaskQueueManager:: *)(base::TimeTicks, bool), base::WeakPtr<blink::scheduler::TaskQueueManager>, base::TimeTicks, bool>, void ()>::Run(base::internal::BindStateBase *) bind_internal.h 339 0x109bec02c 34 base::internal::RunMixin<base::Callback<void (), (base::internal::CopyMode)0, (base::internal::RepeatMode)0>>::Run() callback.h 47 0x103416bda 35 base::debug::TaskAnnotator::RunTask(const char *, base::PendingTask *) task_annotator.cc 52 0x1031cb73b 36 base::MessageLoop::RunTask(base::PendingTask *) message_loop.cc 413 0x103281d5b 37 base::MessageLoop::DeferOrRunPendingTask(base::PendingTask) message_loop.cc 422 0x103282274 38 base::MessageLoop::DoWork() message_loop.cc 515 0x103282cad 39 base::MessagePumpCFRunLoopBase::RunWork() message_pump_mac.mm 302 0x103293998 40 ::___ZN4base24MessagePumpCFRunLoopBase13RunWorkSourceEPv_block_invoke() message_pump_mac.mm 279 0x10329391c 41 base::mac::CallWithEHFrame(void () block_pointer) call_with_eh_frame_asm.S 36 0x103243e0a 42 base::MessagePumpCFRunLoopBase::RunWorkSource(void *) message_pump_mac.mm 278 0x103292f15 43 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 0x7fff81a567e1 44 __CFRunLoopDoSources0 0x7fff81a35f1c 45 __CFRunLoopRun 0x7fff81a3543f 46 CFRunLoopRunSpecific 0x7fff81a34e38 47 base::MessagePumpCFRunLoop::DoRun(base::MessagePump::Delegate *) message_pump_mac.mm 526 0x103293ffc 48 base::MessagePumpCFRunLoopBase::Run(base::MessagePump::Delegate *) message_pump_mac.mm 210 0x1032936fa 49 base::MessageLoop::RunHandler() message_loop.cc 378 0x1032817e5 50 base::RunLoop::Run() run_loop.cc 35 0x103338265 51 base::Thread::Run(base::RunLoop *) thread.cc 245 0x10340647c 52 base::Thread::ThreadMain() thread.cc 333 0x1034071d6 53 base::(anonymous namespace)::ThreadFunc(void *) platform_thread_posix.cc 71 0x1033e65a1 54 _pthread_body 0x7fff8945799d 55 _pthread_start 0x7fff8945791a 56 thread_start 0x7fff89455351 [WARNING:/Volumes/Builds/jenkins/ws/St_Make/code/products/player/pepper/gypbuild/../../../../flash/platform/pepper/pep_menu.cpp(166)] Error -3 from PPB_Flash_Menu::Show(). Render process exited with code 5 (crashed)