Disable Pepper using OpenGL images on macOS

We don't support textures in the GL_TEXTURE_RECTANGLE_ARB texture target
which is used by Pepper now unless explicitly disabled.

Task-number: QTBUG-60706
Change-Id: I56c1ba124e9ed666248912a20cf6db0230e6d981
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>